# dissertation-to-audiobook

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
eval/: __init__.py  run.py  score.py  scorecard.json  scorecard.md  vision_run.py
eval/corpus/gao/: labels.json  result.json  script.md
eval/corpus/zhu/: labels.json  result.json  script.md
sample/: README.md
specs/: thesis_audiobook_build_spec.md  thesis_audiobook_pipeline_plan.md
src/thesis_audiobook/: __init__.py  appendix_signpost.py  audio.py  bootstrap.py  cartographer.py  chunking.py  citation_naturalize.py  cleanup.py  cli.py  config.py  context.py  copyedit.py  cost.py  curate.py  engine.py  equations.py  extraction_qc.py  extraction_repair.py  faithfulness.py  ir.py  ledger.py  lexicon.py  linkage.py  log.py  markdown_bib.py  markdown_ir.py  narrate.py  page_align.py  pipeline.py  pronunciation.py  provenance.py  qc_fix.py  script_qc.py  script_repair.py  structurer.py  verifier.py  vision_structure.py  warnings.py
src/thesis_audiobook/adapters/: __init__.py  anthropic_llm.py  cover.py  elevenlabs_tts.py  ffmpeg_muxer.py  file_cache.py  grobid_client.py  markdown_bib_parser.py  markdown_parser.py  marker_parser.py  mineru_parser.py  mocks.py  pdf_render.py  poppler_parser.py  status.py
src/thesis_audiobook/data/: pronunciation.json
src/thesis_audiobook/data/profiles/: committee.toml  general.toml
src/thesis_audiobook/normalization/: __init__.py  acronyms.py  greek.py  latex.py  mojibake.py  numbers.py  repetition.py  segmentation.py  stats.py  units.py
src/thesis_audiobook/ports/: __init__.py  audio.py  bib.py  cache.py  llm.py  parser.py  pronunciation.py  reporter.py  tts.py  vision.py
src/thesis_audiobook/stages/: __init__.py  appendix_signpost.py  assemble_audio.py  assemble_script.py  build_ir.py  cartographer.py  citations.py  curate.py  figures.py  ingest.py  lexicon.py  math.py  narrate.py  normalize.py  page_align.py  script_qc.py  script_repair.py  select.py  structurer.py  tts.py  vision_cartographer.py
tests/: conftest.py
tests/fixtures/: tiny.ir.json
tests/fixtures/cassettes/: anthropic_gloss.json  chapter6.pdftotext.txt  grobid_sample.tei.xml  marker_sample.md
tests/fixtures/golden/: chapter6.ir.json
tests/golden/: test_e2e_m4b.py  test_ir_golden.py  test_script_golden.py
tests/golden/__snapshots__/: test_script_golden.ambr
tests/integration/: test_live_curate.py  test_live_llm.py  test_live_parse.py  test_live_smoke.py  test_live_tts.py
tests/property/: test_cache_key.py  test_chunking_props.py  test_ir_roundtrip.py  test_normalize_props.py
tests/unit/: test_acronyms.py  test_anthropic_llm.py  test_appendix_signpost.py  test_assemble_audio.py  test_assemble_script.py  test_build_ir.py  test_cartographer.py  test_chunking.py  test_citation_naturalize.py  test_citations.py  test_cleanup.py  test_cli_credentials.py  test_cli_run.py  test_cli_run_v2.py  test_copyedit.py  test_cost.py  test_cost_guard.py  test_cover.py  test_curate.py  test_determinism.py  test_dry_run.py  test_engine.py  test_eval_score.py  test_extraction_qc.py  test_extraction_repair.py  test_faithfulness.py  test_figures.py  test_greek.py  test_grobid_client.py  test_ir.py  test_latex.py  test_ledger.py  test_lexicon.py  test_lexicon_pron.py  test_linkage.py  test_markdown_bib.py  test_markdown_ir.py  test_markdown_parser.py  test_math.py  test_mojibake.py  (+21 more)
